--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,18 @@ dependencies:
   sqflite: ^2.3.0
   intl: ^0.19.0
   equatable: ^2.0.5
+  rename_app: ^1.3.2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter:
   uses-material-design: true
